tests/bad/bad023.lat
// Assigning int to string variable.

int main () {
 string x = 1;
 return 0 ;
}